--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,28 +36,28 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MM
 endorsed.classpath=
 excludes=
-file.reference.beansbinding.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\beansbinding.jar
-file.reference.datechooser.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\datechooser.jar
-file.reference.flatlaf-2.1.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\flatlaf-2.1.jar
-file.reference.gradient-icon-font.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\gradient-icon-font.jar
-file.reference.miglayout-4.0.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\miglayout-4.0.jar
-file.reference.MisComponentes.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\MisComponentes.jar
-file.reference.sqljdbc42.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\sqljdbc42.jar
-file.reference.TableLayout.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\TableLayout.jar
-file.reference.TimingFramework-0.55.jar=D:\\NetBeans Projects\\MM\\MarinaMeza_1\\src\\libs\\TimingFramework-0.55.jar
+file.reference.beansbinding.jar=src/libs/beansbinding.jar
+file.reference.datechooser.jar=src/libs/datechooser.jar
+file.reference.flatlaf-2.1.jar=src/libs/flatlaf-2.1.jar
+file.reference.gradient-icon-font.jar=src/libs/gradient-icon-font.jar
+file.reference.miglayout-core-5.3.jar=src/libs/miglayout-core-5.3.jar
+file.reference.miglayout-swing-5.3.jar=src/libs/miglayout-swing-5.3.jar
+file.reference.MisComponentes.jar=src/libs/MisComponentes.jar
+file.reference.sqljdbc42.jar=src/libs/sqljdbc42.jar
+file.reference.TimingFramework-0.55.jar=src/libs/TimingFramework-0.55.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.MisComponentes.jar}:\
-    ${file.reference.TableLayout.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.beansbinding.jar}:\
     ${file.reference.datechooser.jar}:\
     ${file.reference.flatlaf-2.1.jar}:\
     ${file.reference.gradient-icon-font.jar}:\
-    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.miglayout-core-5.3.jar}:\
+    ${file.reference.miglayout-swing-5.3.jar}:\
     ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
