Patron singleton a todos los controladores

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,6 +44,7 @@ file.reference.miglayout-core-5.3.jar=src/libs/miglayout-core-5.3.jar
 file.reference.miglayout-swing-5.3.jar=src/libs/miglayout-swing-5.3.jar
 file.reference.MisComponentes.jar=src/libs/MisComponentes.jar
 file.reference.sqljdbc42.jar=src/libs/sqljdbc42.jar
+file.reference.swing-time-picker.jar=src/libs/swing-time-picker.jar
 file.reference.TimingFramework-0.55.jar=src/libs/TimingFramework-0.55.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -58,7 +59,8 @@ javac.classpath=\
     ${file.reference.gradient-icon-font.jar}:\
     ${file.reference.miglayout-core-5.3.jar}:\
     ${file.reference.miglayout-swing-5.3.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.swing-time-picker.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +73,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
