--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.jlink.output=${dist.jlink.dir}/MM
 endorsed.classpath=
 excludes=
 file.reference.beansbinding.jar=src/libs/beansbinding.jar
+file.reference.datechooser2.jar=src/libs/datechooser2.jar
 file.reference.flatlaf-2.1.jar=src/libs/flatlaf-2.1.jar
 file.reference.gradient-icon-font.jar=src/libs/gradient-icon-font.jar
 file.reference.miglayout-core-5.3.jar=src/libs/miglayout-core-5.3.jar
@@ -58,7 +59,8 @@ javac.classpath=\
     ${file.reference.miglayout-core-5.3.jar}:\
     ${file.reference.miglayout-swing-5.3.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.swing-time-picker.jar}
+    ${file.reference.swing-time-picker.jar}:\
+    ${file.reference.datechooser2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
