--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,11 +39,14 @@ excludes=
 file.reference.beansbinding.jar=src/libs/beansbinding.jar
 file.reference.datechooser2.jar=src/libs/datechooser2.jar
 file.reference.flatlaf-2.1.jar=src/libs/flatlaf-2.1.jar
+file.reference.flatlaf-extras-2.2.jar=src/libs/flatlaf-extras-2.2.jar
+file.reference.flatlaf-intellij-themes-2.2.jar=src/libs/flatlaf-intellij-themes-2.2.jar
 file.reference.gradient-icon-font.jar=src/libs/gradient-icon-font.jar
 file.reference.miglayout-core-5.3.jar=src/libs/miglayout-core-5.3.jar
 file.reference.miglayout-swing-5.3.jar=src/libs/miglayout-swing-5.3.jar
 file.reference.MisComponentes.jar=src/libs/MisComponentes.jar
-file.reference.sqljdbc42.jar=src/libs/sqljdbc42.jar
+file.reference.mssql-jdbc-10.2.1.jre8.jar=src/libs/mssql-jdbc-10.2.1.jre8.jar
+file.reference.svgSalamander-1.1.3.jar=src/libs/svgSalamander-1.1.3.jar
 file.reference.swing-time-picker.jar=src/libs/swing-time-picker.jar
 file.reference.TimingFramework-0.55.jar=src/libs/TimingFramework-0.55.jar
 includes=**
@@ -58,9 +61,12 @@ javac.classpath=\
     ${file.reference.gradient-icon-font.jar}:\
     ${file.reference.miglayout-core-5.3.jar}:\
     ${file.reference.miglayout-swing-5.3.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
     ${file.reference.swing-time-picker.jar}:\
-    ${file.reference.datechooser2.jar}
+    ${file.reference.mssql-jdbc-10.2.1.jre8.jar}:\
+    ${file.reference.datechooser2.jar}:\
+    ${file.reference.flatlaf-extras-2.2.jar}:\
+    ${file.reference.flatlaf-intellij-themes-2.2.jar}:\
+    ${file.reference.svgSalamander-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
