--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.flatlaf-2.1.jar=src/libs/flatlaf-2.1.jar
 file.reference.flatlaf-extras-2.2.jar=src/libs/flatlaf-extras-2.2.jar
 file.reference.flatlaf-intellij-themes-2.2.jar=src/libs/flatlaf-intellij-themes-2.2.jar
 file.reference.gradient-icon-font.jar=src/libs/gradient-icon-font.jar
+file.reference.jide_demo.jar=src/libs/jide_demo.jar
 file.reference.miglayout-core-5.3.jar=src/libs/miglayout-core-5.3.jar
 file.reference.miglayout-swing-5.3.jar=src/libs/miglayout-swing-5.3.jar
 file.reference.MisComponentes.jar=src/libs/MisComponentes.jar
@@ -66,7 +67,8 @@ javac.classpath=\
     ${file.reference.datechooser2.jar}:\
     ${file.reference.flatlaf-extras-2.2.jar}:\
     ${file.reference.flatlaf-intellij-themes-2.2.jar}:\
-    ${file.reference.svgSalamander-1.1.3.jar}
+    ${file.reference.svgSalamander-1.1.3.jar}:\
+    ${file.reference.jide_demo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
