--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,19 +37,27 @@ dist.jlink.output=${dist.jlink.dir}/MM
 endorsed.classpath=
 excludes=
 file.reference.beansbinding.jar=src/libs/beansbinding.jar
+file.reference.commons-logging-1.2.jar=src/libs/itext/commons-logging-1.2.jar
 file.reference.datechooser2.jar=src/libs/datechooser2.jar
 file.reference.flatlaf-2.1.jar=src/libs/flatlaf-2.1.jar
 file.reference.flatlaf-extras-2.2.jar=src/libs/flatlaf-extras-2.2.jar
 file.reference.flatlaf-intellij-themes-2.2.jar=src/libs/flatlaf-intellij-themes-2.2.jar
+file.reference.fontbox-2.0.22.jar=src/libs/itext/fontbox-2.0.22.jar
 file.reference.gradient-icon-font.jar=src/libs/gradient-icon-font.jar
+file.reference.graphics2d-0.30.jar=src/libs/itext/graphics2d-0.30.jar
 file.reference.jide_demo.jar=src/libs/jide_demo.jar
+file.reference.jsoup-1.10.2.jar=src/libs/itext/jsoup-1.10.2.jar
 file.reference.miglayout-core-5.3.jar=src/libs/miglayout-core-5.3.jar
 file.reference.miglayout-swing-5.3.jar=src/libs/miglayout-swing-5.3.jar
 file.reference.MisComponentes.jar=src/libs/MisComponentes.jar
 file.reference.mssql-jdbc-10.2.1.jre8.jar=src/libs/mssql-jdbc-10.2.1.jre8.jar
+file.reference.openhtmltopdf-core-1.0.6.jar=src/libs/itext/openhtmltopdf-core-1.0.6.jar
+file.reference.openhtmltopdf-pdfbox-1.0.6.jar=src/libs/itext/openhtmltopdf-pdfbox-1.0.6.jar
+file.reference.pdfbox-2.0.22.jar=src/libs/itext/pdfbox-2.0.22.jar
 file.reference.svgSalamander-1.1.3.jar=src/libs/svgSalamander-1.1.3.jar
 file.reference.swing-time-picker.jar=src/libs/swing-time-picker.jar
 file.reference.TimingFramework-0.55.jar=src/libs/TimingFramework-0.55.jar
+file.reference.xmpbox-2.0.22.jar=src/libs/itext/xmpbox-2.0.22.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -68,7 +76,15 @@ javac.classpath=\
     ${file.reference.flatlaf-extras-2.2.jar}:\
     ${file.reference.flatlaf-intellij-themes-2.2.jar}:\
     ${file.reference.svgSalamander-1.1.3.jar}:\
-    ${file.reference.jide_demo.jar}
+    ${file.reference.jide_demo.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fontbox-2.0.22.jar}:\
+    ${file.reference.graphics2d-0.30.jar}:\
+    ${file.reference.jsoup-1.10.2.jar}:\
+    ${file.reference.openhtmltopdf-core-1.0.6.jar}:\
+    ${file.reference.openhtmltopdf-pdfbox-1.0.6.jar}:\
+    ${file.reference.pdfbox-2.0.22.jar}:\
+    ${file.reference.xmpbox-2.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
